; ModuleID = '/home/carl/AnghaBench/reactos/subsystems/mvdm/ntvdm/console/extr_video.c_VgaConsoleRepaintScreen.c'
source_filename = "/home/carl/AnghaBench/reactos/subsystems/mvdm/ntvdm/console/extr_video.c_VgaConsoleRepaintScreen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32, i32 }

@ScreenMode = common dso_local global i64 0, align 8
@GRAPHICS_MODE = common dso_local global i64 0, align 8
@GraphicsConsoleBuffer = common dso_local global i32* null, align 8
@DoubleWidth = common dso_local global i64 0, align 8
@DoubleHeight = common dso_local global i64 0, align 8
@TextConsoleBuffer = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @VgaConsoleRepaintScreen(%struct.TYPE_5__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_5__, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i32* null, i32** %4, align 8
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %7 = bitcast %struct.TYPE_5__* %5 to i8*
  %8 = bitcast %struct.TYPE_5__* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %7, i8* align 4 %8, i64 16, i1 false)
  %9 = load i64, i64* @ScreenMode, align 8
  %10 = load i64, i64* @GRAPHICS_MODE, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %38

12:                                               ; preds = %1
  %13 = load i32*, i32** @GraphicsConsoleBuffer, align 8
  store i32* %13, i32** %4, align 8
  %14 = load i64, i64* @DoubleWidth, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %25

16:                                               ; preds = %12
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = mul nsw i32 %18, 2
  store i32 %19, i32* %17, align 4
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = mul nsw i32 %21, 2
  %23 = add nsw i32 %22, 1
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 1
  store i32 %23, i32* %24, align 4
  br label %25

25:                                               ; preds = %16, %12
  %26 = load i64, i64* @DoubleHeight, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %37

28:                                               ; preds = %25
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 2
  %30 = load i32, i32* %29, align 4
  %31 = mul nsw i32 %30, 2
  store i32 %31, i32* %29, align 4
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 3
  %33 = load i32, i32* %32, align 4
  %34 = mul nsw i32 %33, 2
  %35 = add nsw i32 %34, 1
  %36 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 3
  store i32 %35, i32* %36, align 4
  br label %37

37:                                               ; preds = %28, %25
  br label %40

38:                                               ; preds = %1
  %39 = load i32*, i32** @TextConsoleBuffer, align 8
  store i32* %39, i32** %4, align 8
  br label %40

40:                                               ; preds = %38, %37
  %41 = load i32*, i32** %4, align 8
  %42 = call i32 @__InvalidateConsoleDIBits(i32* %41, %struct.TYPE_5__* %5)
  %43 = load i32, i32* %2, align 4
  ret i32 %43
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @__InvalidateConsoleDIBits(i32*, %struct.TYPE_5__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
